Revert "Fix navbar stuck after screen expand"
This reverts commit ab87e8827c9dde45d08b55ee9329f57f8de45317.

--- a/src/components/HomePage/navbar.css
+++ b/src/components/HomePage/navbar.css
@@ -108,9 +108,3 @@
 .footer-link:hover {
 	color: #8da86d;
 }
-
-#menu_items {
-	@media (min-width: 992px) {
-		width: auto;
-	}
-}
